<?xml version="1.0"?>
<package format="2">
	<name>cpx_fec_msgs</name>
	<version>0.1.0</version>
	<description>Message and service definitions for cpx-fec.</description>

	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>

	<license>GPLv3</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>

	<export>
	</export>
</package>
